commandapi/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: commandapi
spec: {}
status: {}
