commandapi/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: commandapi
  name: commandapi
  namespace: commandapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: commandapi
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
