commandapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: commandapi
  name: commandapi
  namespace: commandapi
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: commandapi
  type: ClusterIP
status:
  loadBalancer: {}
